# iNet-API-Demo

./: .gitignore  CMakeLists.txt  CameraStreamer.cpp  CameraStreamer.hpp  README.md  build.sh  camerastreamer.cpp  camerastreamer.hpp  cmat.h  iNet-API-Demo.sln  iNet-API-Demo.vcxproj  iNet-API-Demo.vcxproj.filters  logger.cpp  logger.h  main.cpp  run.sh  videostreamer.cpp  videostreamer.hpp
docs/: AIPro_iNet_solution_guide_for_Ubuntu_22.04_v1.1 (English).md
include/: generator.h  global.h  util.h
include_opencv/opencv2/: cvconfig.h  opencv_modules.hpp
